--- a/test.ipynb
+++ b/test.ipynb
@@ -20,11 +20,11 @@
     "import numpy as np\n",
     "from statsmodels.tsa.vector_ar.vecm import coint_johansen\n",
     "from statsmodels.tsa.stattools import adfuller\n",
-    "\n",
     "import os\n",
     "import pandas as pd\n",
     "from statsmodels.tsa.api import AutoReg\n",
-    "from typing import Dict\n"
+    "from typing import Dict\n",
+    "from scipy.stats import pearsonr"
    ]
   },
   {
@@ -57,15 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import yfinance as yf\n",
-    "from vnstock import Vnstock\n",
-    "import numpy as np\n",
-    "from statsmodels.tsa.vector_ar.vecm import coint_johansen\n",
-    "from statsmodels.tsa.stattools import adfuller\n",
-    "import os\n",
-    "from scipy.stats import pearsonr\n",
-    "\n",
     "class StatArbStrategy:\n",
     "    def __init__(self, etf, stocks, start_date, end_date, file_path,\n",
     "                 estimation_window=60, min_trading_days=30, threshold=0.05,\n",
@@ -516,67 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valid s-scores for 1: 3 out of 190\n",
-      "Valid s-scores for 2: 0 out of 190\n",
-      "Valid s-scores for 3: 0 out of 190\n",
-      "Valid s-scores for 4: 0 out of 190\n",
-      "Valid s-scores for 5: 0 out of 190\n",
-      "Valid s-scores for 6: 0 out of 190\n",
-      "Valid s-scores for 7: 0 out of 190\n",
-      "Valid s-scores for 8: 0 out of 190\n",
-      "Valid s-scores for 9: 0 out of 190\n",
-      "Valid s-scores for 10: 0 out of 190\n",
-      "Valid s-scores for 11: 0 out of 190\n",
-      "Valid s-scores for 12: 1 out of 190\n",
-      "Valid s-scores for 13: 21 out of 190\n",
-      "Valid s-scores for 14: 7 out of 190\n",
-      "Valid s-scores for 15: 30 out of 190\n",
-      "Valid s-scores for 16: 26 out of 190\n",
-      "Valid s-scores for 17: 29 out of 190\n",
-      "Valid s-scores for 18: 28 out of 190\n",
-      "Valid s-scores for 19: 116 out of 190\n",
-      "Valid s-scores for 20: 2 out of 190\n",
-      "Valid s-scores for 21: 7 out of 190\n",
-      "Valid s-scores for 22: 9 out of 190\n",
-      "Valid s-scores for 23: 25 out of 190\n",
-      "Valid s-scores for 24: 30 out of 190\n",
-      "Valid s-scores for 25: 32 out of 190\n",
-      "Valid s-scores for 26: 6 out of 190\n",
-      "Valid s-scores for 27: 30 out of 190\n",
-      "Valid s-scores for 28: 34 out of 190\n",
-      "Valid s-scores for 29: 30 out of 190\n",
-      "Valid s-scores for 30: 31 out of 190\n",
-      "Valid s-scores for 31: 30 out of 190\n",
-      "Valid s-scores for 32: 0 out of 190\n",
-      "Valid s-scores for 33: 25 out of 190\n",
-      "Valid s-scores for 34: 21 out of 190\n",
-      "Valid s-scores for 35: 19 out of 190\n",
-      "Valid s-scores for 36: 17 out of 190\n",
-      "Valid s-scores for 37: 2 out of 190\n",
-      "Valid s-scores for 38: 2 out of 190\n",
-      "Valid s-scores for 39: 7 out of 190\n",
-      "Valid s-scores for 40: 3 out of 190\n",
-      "Valid s-scores for 41: 0 out of 190\n",
-      "Total valid s-scores: 0 out of 7790\n",
-      "Total s: 623\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize and fit OU process\n",
     "signal_gen = SignalGenerator(residuals_pivot, ou_window=60)\n",
     "signal_gen.apply_ou_fitting()\n",
-    "ou_params = signal_gen.ou_params\n",
-    "s_score_count,total_score=signal_gen.count_valid_s_scores()\n",
-    "print(f\"Total s: {total_score}\")\n",
-    "\n"
+    "ou_params = signal_gen.ou_params"
    ]
   },
   {
@@ -1086,144 +1024,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from statsmodels.tsa.api import AutoReg\n",
-    "from typing import Dict\n",
-    "\n",
-    "class SignalGenerator:\n",
-    "    def __init__(self, residuals: pd.DataFrame, ou_window: int = 60, fallback_days: int = 5):\n",
-    "        self.residuals = residuals\n",
-    "        self.ou_window = ou_window\n",
-    "        self.fallback_days = fallback_days\n",
-    "        self.ou_params = None\n",
-    "        self.signals = None\n",
-    "        self.last_valid_params = {col: None for col in residuals.columns}\n",
-    "\n",
-    "    def fit_ou_process(self, series: pd.Series, date: pd.Timestamp) -> Dict[str, float]:\n",
-    "        if len(series) < self.ou_window:\n",
-    "            return {'kappa': np.nan, 'm': np.nan, 'sigma': np.nan, 's_score': np.nan}\n",
-    "        series_window = series[-self.ou_window:].dropna()\n",
-    "        series_window = series_window.to_numpy()\n",
-    "        if len(series_window) < self.ou_window:\n",
-    "            return {'kappa': np.nan, 'm': np.nan, 'sigma': np.nan, 's_score': np.nan}\n",
-    "        try:\n",
-    "            model = AutoReg(series_window, lags=1).fit()\n",
-    "            a, b = model.params\n",
-    "            p_value_b = model.pvalues[1]\n",
-    "            if p_value_b >= 0.10 or b <= 0 or b >= 1:\n",
-    "                return {'kappa': np.nan, 'm': np.nan, 'sigma': np.nan, 's_score': np.nan}\n",
-    "            kappa = -np.log(b) * np.sqrt(252)\n",
-    "            m = a / (1 - b)\n",
-    "            sigma = np.sqrt(model.sigma2 * 2 * kappa / (1 - b**2))\n",
-    "            latest = series.iloc[-1]\n",
-    "            sigma_eq = sigma / np.sqrt(2 * kappa) if kappa > 0 else np.inf\n",
-    "            s_score = (latest - m) / sigma_eq if sigma_eq != 0 else 0\n",
-    "            return {'kappa': kappa, 'm': m, 'sigma': sigma, 's_score': s_score}\n",
-    "        except (ValueError, np.linalg.LinAlgError):\n",
-    "            return {'kappa': np.nan, 'm': np.nan, 'sigma': np.nan, 's_score': np.nan}\n",
-    "\n",
-    "    def apply_ou_fitting(self):\n",
-    "        columns = pd.MultiIndex.from_product([self.residuals.columns, ['kappa', 'm', 'sigma', 's_score']])\n",
-    "        self.ou_params = pd.DataFrame(index=self.residuals.index, columns=columns)\n",
-    "        for t in range(self.ou_window, len(self.residuals)):\n",
-    "            date = self.residuals.index[t]\n",
-    "            for stock in self.residuals.columns:\n",
-    "                series = self.residuals[stock].iloc[:t + 1]\n",
-    "                params = self.fit_ou_process(series, date)\n",
-    "                if not np.isnan(params['kappa']):\n",
-    "                    self.last_valid_params[stock] = {'params': params, 'date': date}\n",
-    "                else:\n",
-    "                    if self.last_valid_params[stock] and (date - self.last_valid_params[stock]['date']).days <= self.fallback_days:\n",
-    "                        last_params = self.last_valid_params[stock]['params']\n",
-    "                        latest = series.iloc[-1]\n",
-    "                        m = last_params['m']\n",
-    "                        sigma_eq = last_params['sigma'] / np.sqrt(2 * last_params['kappa']) if last_params['kappa'] > 0 else np.inf\n",
-    "                        params['s_score'] = (latest - m) / sigma_eq if sigma_eq != 0 else 0\n",
-    "                for param, value in params.items():\n",
-    "                    self.ou_params.loc[date, (stock, param)] = value\n",
-    "\n",
-    "def process_results_df(results_df: pd.DataFrame, stocks: list, upper_threshold: float = 1.25, \n",
-    "                      lower_threshold: float = -0.5, ou_window: int = 60) -> tuple[pd.DataFrame, pd.DataFrame]:\n",
-    "    # Sort by Combination_ID\n",
-    "    results_df = results_df.sort_values('Combination_ID')\n",
-    "    \n",
-    "    # Pivot residuals\n",
-    "    residuals_pivot = results_df.pivot(index='Date', columns='Combination_ID', values='Residual')\n",
-    "    \n",
-    "    # Fit OU process\n",
-    "    signal_gen = SignalGenerator(residuals_pivot, ou_window=ou_window)\n",
-    "    signal_gen.apply_ou_fitting()\n",
-    "    ou_params = signal_gen.ou_params\n",
-    "    \n",
-    "    # Generate trade states\n",
-    "    trade_states = pd.DataFrame(index=ou_params.index, columns=residuals_pivot.columns)\n",
-    "    for comb_id in trade_states.columns:\n",
-    "        s_scores = ou_params[(comb_id, 's_score')]\n",
-    "        trade_state = 0\n",
-    "        for date in s_scores.index:\n",
-    "            s_score = s_scores[date]\n",
-    "            if pd.isna(s_score) or pd.isna(residuals_pivot.loc[date, comb_id]):\n",
-    "                trade_state = 0\n",
-    "            else:\n",
-    "                if trade_state == 0 and s_score > upper_threshold:\n",
-    "                    trade_state = 1\n",
-    "                elif trade_state == 1 and s_score < lower_threshold:\n",
-    "                    trade_state = 0\n",
-    "            trade_states.loc[date, comb_id] = trade_state\n",
-    "    \n",
-    "    # Update results_df with s_score and Trade_State\n",
-    "    results_df['s_score'] = results_df.apply(\n",
-    "        lambda row: ou_params.loc[row['Date'], (row['Combination_ID'], 's_score')] \n",
-    "        if row['Date'] in ou_params.index else np.nan, axis=1\n",
-    "    )\n",
-    "    results_df['Trade_State'] = results_df.apply(\n",
-    "        lambda row: trade_states.loc[row['Date'], row['Combination_ID']] \n",
-    "        if row['Date'] in trade_states.index else 0, axis=1\n",
-    "    )\n",
-    "    \n",
-    "    # Add Trading_Combinations column (number of active combinations per day)\n",
-    "    active_combinations_per_day = trade_states.sum(axis=1)\n",
-    "    results_df['Trading_Combinations'] = results_df['Date'].map(active_combinations_per_day)\n",
-    "    \n",
-    "    # Compute positions_df with scaled allocations\n",
-    "    dates = results_df['Date'].unique()\n",
-    "    positions_df = pd.DataFrame(index=dates)\n",
-    "    \n",
-    "    for date in dates:\n",
-    "        active_combs = active_combinations_per_day[date]\n",
-    "        if active_combs == 0:\n",
-    "            total_utilization = 0\n",
-    "            allocation = 0\n",
-    "        else:\n",
-    "            # Portfolio utilization: 50% for 1, +10% per additional, max 100%\n",
-    "            total_utilization = min(0.5 + 0.1 * (active_combs - 1), 1.0)\n",
-    "            allocation = total_utilization / active_combs\n",
-    "        \n",
-    "        # Set positions\n",
-    "        positions_df.loc[date, 'Position_VN30F1M'] = -total_utilization  # Total short across all combinations\n",
-    "        for stock in stocks:\n",
-    "            beta_col = f'Beta_{stock}'\n",
-    "            if beta_col in results_df.columns:\n",
-    "                active_rows = results_df[(results_df['Date'] == date) & (results_df['Trade_State'] == 1)]\n",
-    "                positions_df.loc[date, f'Position_{stock}'] = (active_rows[beta_col] * allocation).sum()\n",
-    "            else:\n",
-    "                positions_df.loc[date, f'Position_{stock}'] = 0\n",
-    "    \n",
-    "    return results_df, positions_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from statsmodels.tsa.api import AutoReg\n",
-    "from typing import Dict\n",
-    "\n",
     "class SignalGenerator:\n",
     "    def __init__(self, residuals: pd.DataFrame, ou_window: int = 60, fallback_days: int = 5):\n",
     "        self.residuals = residuals\n",
@@ -1398,13 +1198,6 @@
    "source": [
     "updated_results_df.to_csv('result.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
