--- a/doc/Backtesting.tex
+++ b/doc/Backtesting.tex
@@ -108,43 +108,43 @@ Sales proceeds advance    &  Yes\\ \hline
     YEAR & 2021 & 2022 & 2023\\%
     \hline%
     \rowcolor{white}%
-    YEARLY & 1.868\% & -18.97\% & -3.6\%\\%
+    YEARLY & 4.2\% & -25.11\% & -0.12\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JAN & n.a\% & -0.1\% & 0.76\%\\%
+    JAN & n.a\% & -1.27\% & 0.23\%\\%
     \hline%
     \rowcolor{white}%
-    FEB & n.a\% & -0.2\% & -2.45\%\\%
+    FEB & n.a\% & -1.02\% & -2.53\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAR & n.a\% & -2.904\% & 2.84\%\\%
+    MAR & n.a\% & -3.31\% & 2.90\%\\%
     \hline%
     \rowcolor{white}%
-    APR & n.a\% & -10.29\% & -2.34\%\\%
+    APR & n.a\% & -6.48\% & -0.11\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAY & n.a\% & 0.77\% & 0.87\%\\%
+    MAY & n.a\% & -6.66\% & 2.89\%\\%
     \hline%
     \rowcolor{white}%
-    JUN & n.a\% & 0.46\% & -0.22\%\\%
+    JUN & n.a\% & -0.57\% & -0.0\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JUL & n.a\% & 0.95\% & 0.15\%\\%
+    JUL & n.a\% & 0.77\% & -0.07\%\\%
     \hline%
     \rowcolor{white}%
-    AUG & 0.00\% & -0.3\% & 0.00\%\\%
+    AUG & 0.00\% & -0.00\% & 0.00\%\\%
     \hline%
     \rowcolor{lightgray}%
-    SEP & 0.36\% & -3.5\% & -4.55\%\\%
+    SEP & 0.36\% & -4.47\% & -4.55\%\\%
     \hline%
     \rowcolor{white}%
-    OCT & 3.72\% & -5.13\% & -5.33\%\\%
+    OCT & 1.28\% & -5.13\% & -5.32\%\\%
     \hline%
     \rowcolor{lightgray}%
-    NOV & -0.16\% & 0.00\% & 5.42\%\\%
+    NOV & 1.55\% & 0.00\% & 5.42\%\\%
     \hline%
     \rowcolor{white}%
-    DEC & -1.55\% & 0.00\% & 1.68\%\\%
+    DEC & -0.96\% & 0.00\% & 1.54\%\\%
     \hline%
     \end{tabular}
 }
@@ -155,43 +155,43 @@ Sales proceeds advance    &  Yes\\ \hline
     YEAR & 2021 & 2022 & 2023\\%
     \hline%
     \rowcolor{white}%
-    YEARLY & -2.13\% & -8.20\% & 19.22\%\\%
+    YEARLY & -2.77\% & -16.63\% & 11.10\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JAN & n.a\% & 0.19\% & 3.55\%\\%
+    JAN & n.a\% & 0.51\% & 4.69\%\\%
     \hline%
     \rowcolor{white}%
-    FEB & n.a\% & -2.3\% & 0.19\%\\%
+    FEB & n.a\% & -2.67\% & -1.91\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAR & n.a\% & -1.65\% & 8.92\%\\%
+    MAR & n.a\% & 0.15\% & 7.1\%\\%
     \hline%
     \rowcolor{white}%
-    APR & n.a\% & -4.50\% & 0.83\%\\%
+    APR & n.a\% & -6.06\% & 0.55\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAY & n.a\% & 0.25\% & -0.43\%\\%
+    MAY & n.a\% & -3.43\% & -1.00\%\\%
     \hline%
     \rowcolor{white}%
-    JUN & n.a\% & 2.36\% & -0.95\%\\%
+    JUN & n.a\% & 3.82\% & 0.56\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JUL & n.a\% & -0.7\% & 7.28\%\\%
+    JUL & n.a\% & -0.44\% & 5.57\%\\%
     \hline%
     \rowcolor{white}%
-    AUG & n.a\% & -0.12\% & 1.21\%\\%
+    AUG & -0.54\% & 0.00\% & 0.3\%\\%
     \hline%
     \rowcolor{lightgray}%
-    SEP & -0.53\% & -4.31\% & -0.82\%\\%
+    SEP & -0.59\% & -8.18\% & -0.82\%\\%
     \hline%
     \rowcolor{white}%
-    OCT & 0.41\% & 0.00\% & -3.56\%\\%
+    OCT & 1.34\% & -3.41\% & -3.56\%\\%
     \hline%
     \rowcolor{lightgray}%
-    NOV & -1.15\% & 1.55\% & 0.46\%\\%
+    NOV & -1.43\% & 1.55\% & -1.99\%\\%
     \hline%
     \rowcolor{white}%
-    DEC & -0.88\% & 0.95\% & 1.7\%\\%
+    DEC & -1.55\% & 0.76\% & 1.66\%\\%
     \hline%
     \end{tabular}
 }
@@ -202,43 +202,43 @@ Sales proceeds advance    &  Yes\\ \hline
     YEAR & 2023 & 2024\\%
     \hline%
     \rowcolor{white}%
-    YEARLY & 0.00\% &  -2.24\%\\%
+    YEARLY & 0.00\% &  -1.77\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JAN & 0.00\% &  0.62\%\\%
+    JAN & 0.00\% &  1.41\%\\%
     \hline%
     \rowcolor{white}%
-    FEB & 0.00\% &  3.68\%\\%
+    FEB & 0.00\% &  0.37\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAR & 0.00\% &  0.00\%\\%
+    MAR & 0.00\% &  1.36\%\\%
     \hline%
     \rowcolor{white}%
-    APR & 0.00\% &  0.00\%\\%
+    APR & 0.00\% &  -0.52\%\\%
     \hline%
     \rowcolor{lightgray}%
     MAY & 0.00\% &  0.00\%\\%
     \hline%
     \rowcolor{white}%
-    JUN & 0.00\% &  -0.93\%\\%
+    JUN & 0.00\% &  -1.12\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JUL & 0.00\% &  1.54\%\\%
+    JUL & 0.00\% &  0.14\%\\%
     \hline%
     \rowcolor{white}%
-    AUG & 0.00\% &  -1.93\%\\%
+    AUG & 0.00\% &  2.55\%\\%
     \hline%
     \rowcolor{lightgray}%
-    SEP & 0.00\% &  0.00\%\\%
+    SEP & 0.00\% &  -0.91\%\\%
     \hline%
     \rowcolor{white}%
-    OCT & 0.00\% &  -2.26\%\\%
+    OCT & 0.00\% &  -2.29\%\\%
     \hline%
     \rowcolor{lightgray}%
-    NOV & 0.00\% &  -2.86\%\\%
+    NOV & 0.00\% &  -2.05\%\\%
     \hline%
     \rowcolor{white}%
-    DEC & 0.00\% &  0.08\%\\%
+    DEC & 0.00\% &  -0.59\%\\%
     \hline%
     \end{tabular}
 }\\%
@@ -251,8 +251,8 @@ Sales proceeds advance    &  Yes\\ \hline
 \hline%
 \textbf{Time Period}&\multicolumn{4}{c||}{\textbf{In{-}Sample}}&\multicolumn{2}{c|}{\textbf{Out{-}of{-}Sample}}\\%
 \textbf{}
-&\multicolumn{4}{c||}{<CHANGEME: INSERT PERIOD HERE>}
-&\multicolumn{2}{c|}{<CHANGEME: INSERT PERIOD HERE>}\\%
+&\multicolumn{4}{c||}{< 08/2022-12/2023>}
+&\multicolumn{2}{c|}{<01/2024-12/2024>}\\%
 \hline%
 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{\textbf{Initial Parameters}}&\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}||}{\textbf{Optimal Parameters}}&\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{\textbf{Optimal Parameters}}\\%
 \cline{2%
@@ -261,25 +261,25 @@ Sales proceeds advance    &  Yes\\ \hline
 \hline%
 & Portfolio & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{VNINDEX} & Portfolio & Portfolio & VNINDEX\\%
 \hline%
-HPR & -18.38\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-20.80\%} & 7.1\% & -2.24\% & 18.83\%\\%
+HPR & -22.05\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-20.80\%} & -9.95\% & -1.77\% & 18.83\%\\%
 \hline%
-Excess HPR & 2.42\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 26.72\% & -21.07\% & n/a\\%
+Excess HPR & -1.25\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 10.79\% & -20.60\% & n/a\\%
 \hline%
-Annual Return & -8.36\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-9.54\%} & 2.88\% & -2.25\% & 18.9\%\\%
+Annual Return & -10.15\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-4.24\%} & 2.88\% & -1.78\% & 18.9\%\\%
 \hline%
-Annual Excess Return & 1.18\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 11.5\% & -21.15\% & n/a\\%
+Annual Excess Return & -0.62\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 4.93\% & -20.68\% & n/a\\%
 \hline%
-Maximum Drawdown & 26.99\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{42.46\%} & 10.16\% & 8.58\% & 8.38\%\\%
+Maximum Drawdown & 30.27\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{42.46\%} & 28.98\% & 6.09\% & 8.38\%\\%
 \hline%
-Longest Drawdown & 477 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{477} & 339 & 123 & 71\\%
+Longest Drawdown & 468 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{472} & 530 & 95 & 71\\%
 \hline%
-Turnover Ratio & 8.25\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 9.09\% & 9.09\% & n/a\\%
+Turnover Ratio & 6.35\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 8.95\% & 8.95\% & n/a\\%
 \hline%
-Sharpe Ratio & -1.31 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.65} & -0.21 & -1.19 & 0.97\\%
+Sharpe Ratio & -1.53 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.65} & -0.78 & -0.93 & 0.97\\%
 \hline%
-Sortino Ratio & -0.86 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.54} & 0.3 & -0.32 & 1.67\\%
+Sortino Ratio & -0.9 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.54} & -0.39 & -0.25 & 1.67\\%
 \hline%
-Information Ratio & 0.06 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 0.65 & -1.75 & n/a\\%
+Information Ratio & -0.03 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 0.31 & -1.76 & n/a\\%
 \hline%
 No. stocks in periods&\multicolumn{6}{c|}{}\\%
 \hline%
