--- a/doc/Backtesting.tex
+++ b/doc/Backtesting.tex
@@ -80,8 +80,8 @@ Sales proceeds advance    &  Yes\\ \hline
 \hline%
 \textbf{Time Period}&\multicolumn{4}{c||}{\textbf{In{-}Sample}}&\multicolumn{2}{c|}{\textbf{Out{-}of{-}Sample}}\\%
 \textbf{}
-&\multicolumn{4}{c||}{<CHANGEME: INSERT PERIOD HERE>}
-&\multicolumn{2}{c|}{<CHANGEME: INSERT PERIOD HERE>}\\%
+&\multicolumn{4}{c||}{08-2021-12/2023}
+&\multicolumn{2}{c|}{01/2024-12/2024}\\%
 \hline%
 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{\textbf{Initial Parameters}}&\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}||}{\textbf{Optimal Parameters}}&\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{\textbf{Optimal Parameters}}\\%
 \cline{2%
@@ -148,50 +148,50 @@ Sales proceeds advance    &  Yes\\ \hline
     \hline%
     \end{tabular}
 }
-&\multicolumn{2}{c||}{
+&\multicolumn{2}{c|}{
     % CHANGEME: INCLUDE THE DETAILS IN THIS TABLE
     \begin{tabular}{|c|c|c|c|}%
     \hline%
     YEAR & 2021 & 2022 & 2023\\%
     \hline%
     \rowcolor{white}%
-    YEARLY & -2.77\% & -16.63\% & 11.10\%\\%
+    YEARLY & -2.2\% & -4.4\% & 5.05\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JAN & n.a\% & 0.51\% & 4.69\%\\%
+    JAN & n.a\% & -0.63\% & 3.36\%\\%
     \hline%
     \rowcolor{white}%
-    FEB & n.a\% & -2.67\% & -1.91\%\\%
+    FEB & n.a\% & 1.33\% & -0.27\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAR & n.a\% & 0.15\% & 7.1\%\\%
+    MAR & n.a\% & 1.64\% & 3.02\%\\%
     \hline%
     \rowcolor{white}%
-    APR & n.a\% & -6.06\% & 0.55\%\\%
+    APR & n.a\% & -4.04\% & -1.53\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAY & n.a\% & -3.43\% & -1.00\%\\%
+    MAY & n.a\% & -0.2\% & -0.2\%\\%
     \hline%
     \rowcolor{white}%
-    JUN & n.a\% & 3.82\% & 0.56\%\\%
+    JUN & n.a\% & 3.29\% & 2.27\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JUL & n.a\% & -0.44\% & 5.57\%\\%
+    JUL & n.a\% & 0.35\% & 0.38\%\\%
     \hline%
     \rowcolor{white}%
-    AUG & -0.54\% & 0.00\% & 0.3\%\\%
+    AUG & -3.03\% & -0.00\% & 1.14\%\\%
     \hline%
     \rowcolor{lightgray}%
-    SEP & -0.59\% & -8.18\% & -0.82\%\\%
+    SEP & -0.28\% & -3.58\% & -3.19\%\\%
     \hline%
     \rowcolor{white}%
-    OCT & 1.34\% & -3.41\% & -3.56\%\\%
+    OCT & 1.14\% & -2.41\% & 0.00\%\\%
     \hline%
     \rowcolor{lightgray}%
-    NOV & -1.43\% & 1.55\% & -1.99\%\\%
+    NOV & 0.00\% & 0.00\% & -0.31\%\\%
     \hline%
     \rowcolor{white}%
-    DEC & -1.55\% & 0.76\% & 1.66\%\\%
+    DEC & 0.00\% & 0.00\% & 0.47\%\\%
     \hline%
     \end{tabular}
 }
@@ -202,43 +202,43 @@ Sales proceeds advance    &  Yes\\ \hline
     YEAR & 2023 & 2024\\%
     \hline%
     \rowcolor{white}%
-    YEARLY & 0.00\% &  -1.77\%\\%
+    YEARLY & 0.00\% &  15.31\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JAN & 0.00\% &  1.41\%\\%
+    JAN & 0.00\% &  3.81\%\\%
     \hline%
     \rowcolor{white}%
-    FEB & 0.00\% &  0.37\%\\%
+    FEB & 0.00\% &  9.68\%\\%
     \hline%
     \rowcolor{lightgray}%
-    MAR & 0.00\% &  1.36\%\\%
+    MAR & 0.00\% &  2.11\%\\%
     \hline%
     \rowcolor{white}%
-    APR & 0.00\% &  -0.52\%\\%
+    APR & 0.00\% &  -1.14\%\\%
     \hline%
     \rowcolor{lightgray}%
     MAY & 0.00\% &  0.00\%\\%
     \hline%
     \rowcolor{white}%
-    JUN & 0.00\% &  -1.12\%\\%
+    JUN & 0.00\% &  -0.29\%\\%
     \hline%
     \rowcolor{lightgray}%
-    JUL & 0.00\% &  0.14\%\\%
+    JUL & 0.00\% &  0.38\%\\%
     \hline%
     \rowcolor{white}%
-    AUG & 0.00\% &  2.55\%\\%
+    AUG & 0.00\% &  0.16\%\\%
     \hline%
     \rowcolor{lightgray}%
-    SEP & 0.00\% &  -0.91\%\\%
+    SEP & 0.00\% &  2.17\%\\%
     \hline%
     \rowcolor{white}%
-    OCT & 0.00\% &  -2.29\%\\%
+    OCT & 0.00\% &  -1.52\%\\%
     \hline%
     \rowcolor{lightgray}%
-    NOV & 0.00\% &  -2.05\%\\%
+    NOV & 0.00\% &  -1.16\%\\%
     \hline%
     \rowcolor{white}%
-    DEC & 0.00\% &  -0.59\%\\%
+    DEC & 0.00\% &  0.63\%\\%
     \hline%
     \end{tabular}
 }\\%
@@ -259,27 +259,29 @@ Sales proceeds advance    &  Yes\\ \hline
 -%
 7}%
 \hline%
-& Portfolio & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{VNINDEX} & Portfolio & Portfolio & VNINDEX\\%
+& Portfolio & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{VN30} & Portfolio & Portfolio & VN30\\%
 \hline%
-HPR & -22.05\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-20.80\%} & -9.95\% & -1.77\% & 18.83\%\\%
+Beta & 0.24 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n.a} & 0.12 & 0.22 & n.a\%\\%
 \hline%
-Excess HPR & -1.25\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 10.79\% & -20.60\% & n/a\\%
+HPR & -22.05\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-20.80\%} & -1.78\% & -1.77\% & 15.31\%\\%
 \hline%
-Annual Return & -10.15\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-4.24\%} & 2.88\% & -1.78\% & 18.9\%\\%
+Excess HPR & -1.25\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 22.51\% & -3.52\% & n/a\\%
 \hline%
-Annual Excess Return & -0.62\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 4.93\% & -20.68\% & n/a\\%
+Annual Return & -10.15\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-4.24\%} & -0.75\% & -15.37\% & 18.9\%\\%
 \hline%
-Maximum Drawdown & 30.27\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{42.46\%} & 28.98\% & 6.09\% & 8.38\%\\%
+Annual Excess Return & -0.62\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 10.26\% & -3.54\% & n/a\\%
 \hline%
-Longest Drawdown & 468 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{472} & 530 & 95 & 71\\%
+Maximum Drawdown & 30.27\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{42.46\%} & 8.1\% & 4.32\% & 8.38\%\\%
 \hline%
-Turnover Ratio & 6.35\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 8.95\% & 8.95\% & n/a\\%
+Longest Drawdown & 468 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{472} & 422 & 116 & 71\\%
 \hline%
-Sharpe Ratio & -1.53 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.65} & -0.78 & -0.93 & 0.97\\%
+Turnover Ratio & 6.35\% & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 7.53\% & 10.87\% & n/a\\%
 \hline%
-Sortino Ratio & -0.9 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.54} & -0.39 & -0.25 & 1.67\\%
+Sharpe Ratio & -1.53 &\multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.65} & -0.86 & 1.47 & 0.97\\%
 \hline%
-Information Ratio & -0.03 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 0.31 & -1.76 & n/a\\%
+Sortino Ratio & -0.9 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{-0.54} & -0.11 & 3.28 & 1.67\\%
+\hline%
+Information Ratio & -0.03 & \multicolumn{2}{>{\centering\arraybackslash}p{7.2cm}|}{n/a} & 0.51 & -0.27 & n/a\\%
 \hline%
 No. stocks in periods&\multicolumn{6}{c|}{}\\%
 \hline%
