--- a/doc/Optimization.tex
+++ b/doc/Optimization.tex
@@ -22,8 +22,8 @@
 %
 
 \title{OPTIMIZATION REPORT}
-\author{TRADING ALGORITHM NAME}
-\date{RELEASE DATE}
+\author{Statistical Arbitrage}
+\date{04/04/2024}
 
 \begin{document}
 
@@ -48,29 +48,48 @@ correlation\_threshold & Float & 0.3 & 0.6 & 0.3 & 0.6 \\
 tier & Categorical & 1 & 4 & -- & 1 \\
 first\_allocation & Float & 0.4 & 0.7 & 0.15 & 0.4 \\
 adding\_allocation & Float & 0.2 & 0.3 & 0.1 & 0.2 \\
+cluster & Int & 8 & 10 & 2 & 10\\
 \bottomrule
 \end{tabular}
 \end{table}
 
 \section{Optimization Results}
 
-Figure~\ref{fig:optimization_plots} shows the optimization history and parameter importance plots, which provide insights into the hyperparameter tuning process. The optimization history plot illustrates the objective value over trials, while the parameter importance plot highlights the relative importance of each parameter in achieving the optimal objective value.
-
-\begin{figure}[h]
+Figure~\ref{fig:optimization_plots} \textbf{Train Set}
+\begin{figure}[h!]
 \centering
 \begin{subfigure}{0.48\textwidth}
-    \includegraphics[width=\textwidth]{optuna_trials.png}
-    \caption{Optimization history plot showing the objective value over trials.}
+    \includegraphics[width=\textwidth]{trial_return.png}
+    \caption{Optimization history plot showing the annual return (train) value over trials.}
     \label{fig:optimization_history}
 \end{subfigure}
 \hfill
 \begin{subfigure}{0.48\textwidth}
-    \includegraphics[width=\textwidth]{optuna_feature.png}
-    \caption{Parameter importance plot showing the relative importance of each parameter.}
+    \includegraphics[width=\textwidth]{trial_shapre.png}
+    \caption{Optimization history plot showing the sharpe (train) value over trials}
     \label{fig:parameter_importances}
 \end{subfigure}
-\caption{Visualization of the optimization process: (a) optimization history and (b) parameter importance.}
+\caption{Visualization of the optimization process: (a) annual return and (b) sharpe.}
 \label{fig:optimization_plots}
 \end{figure}
+
+Figure~\ref{fig:optimization_plots} \textbf{Test Set}
+\begin{figure}[h!]
+\centering
+\begin{subfigure}{0.48\textwidth}
+    \includegraphics[width=\textwidth]{trial_return_test.png}
+    \caption{Optimization history plot showing the annual return (test) value over trials.}
+    \label{fig:optimization_history}
+\end{subfigure}
+\hfill
+\begin{subfigure}{0.48\textwidth}
+    \includegraphics[width=\textwidth]{trial_sharpe_test.png}
+    \caption{Optimization history plot showing the sharpe (train) value over trials}
+    \label{fig:parameter_importances}
+\end{subfigure}
+\caption{Visualization of the optimization process: (a) return and (b) sharpe.}
+\label{fig:optimization_plots}
+\end{figure}
+
 
 \end{document}
